# temp-ridesharing

XCOMPARE/: CMakeLists.txt  Cab copy.hpp  Cab.hpp  CabTrip.hpp  CityMapInt.hpp  KdTrip.hpp  Simulator.hpp  a.out  bimatch.hpp  main.cpp  test.cpp  untitled.cpp
Xsimulation/: Cab.hpp  CabTrip.hpp  Cab_orig.hpp  Cab_yy.hpp  CityMapInt.hpp  KdTrip.hpp  Simulator.hpp  graph.hpp  main.cpp  mn_jfk_lga_with_weights.txt  tsharesim.cpp  tsharesim.hpp
Xsimulation/etc/: tsharesim.cpp
XsimulationNN/: #Simulator.hpp#  #main.cpp#  .#main.cpp  ._CabTrip.hpp  ._CityMap.hpp  ._CityMapFloat.hpp  ._KdTrip.hpp  CMakeLists.txt  Cab.hpp  CabTrip.hpp  CityMap.hpp  CityMapFloat.hpp  CityMapInt.hpp  Simulator.hpp  airports.cpp  main.cpp  split.cpp
XsimulationNN/etc/: ._tsharesim.cpp  tsharesim.hpp
